Fixed issue with h1 on small displays

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,18 @@ h1, h2, h3, h4, h5, h6 {
 	margin-bottom: 1rem;
 }
 
+@media screen and (max-width: 549px) {
+	h1 {
+		font-size: 2.25rem;
+	}
+}
+
+@media screen and (min-width: 550px) {
+	h1 {
+		font-size: 3rem;
+	}
+}
+
 section {
 	margin: 3rem 0;
 }
